# acte

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
acte/: __init__.py
acte/chatbot/: __init__.py  chatbot.py  openai_chatbot.py  tools.py
acte/common/: __init__.py  util.py
acte/context/: __init__.py  context.py  context_obj.py
acte/executor/: __init__.py  action_type.py  executor.py
acte/node/: __init__.py  node.py
acte/node/element/: element.py
acte/node/element/block/: block.py  div.py  root.py
acte/node/element/inline/: button.py  (+3 more)
acte/node/implement/: __init__.py  container.py  interactive.py
acte/node/virtual/: cache.py  component_node.py  dyna.py  virtual.py
acte/render/: __init__.py  html_renderer.py  renderer.py
acte/schema/: __init__.py  arr_schema.py  bool_schema.py  int_schema.py  null_schema.py  num_schema.py  obj_schema.py  schema.py  str_schema.py
acte/schema/base_schema/: array_schema.py  base_schema.py  bool_schema.py  int_schema.py  null_schema.py  num_schema.py  str_schema.py
acte/schema/simple_schema/: arr_schema.py  array_schema.py  base_schema.py  bool_schema.py  int_schema.py  null_schema.py  num_schema.py  obj_schema.py  object_schema.py  simple_schema.py  str_schema.py
acte/server/: __init__.py  chatbot_bp.py  server.py
acte/server/static/: index.html
acte/session/: __init__.py  exception.py  ret_val.py  session.py  session_manager.py  validator.py
acte/state/: __init__.py  compute.py  effect.py  memo.py  ref.py  signal.py
demo/: 0_hello_world_demo.py  1_counter_demo.py  2_restaurant_demo.py
(+3 files in other folders)
